--- a/index.html
+++ b/index.html
@@ -5,17 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>best choice for residences</title>
-    <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- googlw font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <!-- bootstrap css link -->
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/venobox.min.css">
-    <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+    <!-- slick slider css link -->
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <!-- venubox css link -->
+    <link rel="stylesheet" href="assets/css/venobox.min.css">
+      <!-- icon css link -->
+    <link rel="stylesheet" href="assets/css/all.min.css">
+    <!-- main css link -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <!-- loader html -->
+  <div class="loader">
+    <img src="assets/images/loader.gif" alt="loader">
+  </div>
     <!-- -----------navber strat-------------- -->
     <nav class="navbar navbar-expand-lg main_menu">
         <div class="container">
@@ -23,7 +30,8 @@
             <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <i class="fa-solid fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 menu_item">
@@ -439,7 +447,7 @@
             <h2>get start with us</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti soluta est exercitationem molestiae ullam iste vel inventore veniam error nobis, eveniet asperiores, amet nihil mollitia totam quo sapiente? Odio cupiditate suscipit officiis natus, facere eveniet?</p>
             <div class="button">
-              <a href="#">join us</a>
+              <a href="login.html">join us</a>
             </div>
           </div>
         </div>
@@ -490,6 +498,11 @@
     </footer>
     <!-- -----------footer end---------------- -->
     <!-- ======================================================== -->
+    <!-- GoTo__UP START -->
+    <div class="go_top" style="opacity: 1;">
+      <span><img class="w-100 img-fluid" src="assets/images/up-arrow.png" alt="image"></span>
+    </div>
+<!-- GoTo__UP END -->
     <!-- -----------banner start------------- -->
     <!-- -----------banner end---------------- -->
     <!-- ======================================================== -->
@@ -497,11 +510,15 @@
     <!-- -----------banner end---------------- -->
     <!-- jQuery link - version 1.12.4 -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <!-- typed js link -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- venubox js link -->
     <script src="assets/js/venobox.min.js"></script>
+    <!-- slider js link -->
     <script src="assets/js/slick.min.js"></script>
+    <!-- main js link -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
