--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>best choice for residences</title>
     <!-- googlw font link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- bootstrap css link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <!-- slick slider css link -->
@@ -15,6 +17,8 @@
     <link rel="stylesheet" href="assets/css/venobox.min.css">
       <!-- icon css link -->
     <link rel="stylesheet" href="assets/css/all.min.css">
+    <!-- aos animation css link -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <!-- main css link -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -64,7 +68,7 @@
             <div class="banner_txt">
               <h1 id="strings"></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, ea incidunt. Excepturi adipisci voluptate distinctio quisquam quae, tenetur accusamus facere nostrum, fugiat mollitia et vero eos pariatur vitae? Itaque, maxime?</p>
-              <div class="search w-100">
+              <div class="search w-100" data-aos="fade-up">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="text" placeholder="Enter a Location">
                 <a href="#">search</a>
@@ -72,7 +76,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <div class="banner_img">
+            <div class="banner_img" data-aos="fade-down">
               <img class="w-100 img-fluid" src="assets/images/banner_main_img.jpg" alt="image">
             </div>
           </div>
@@ -129,19 +133,19 @@
         </div>
         <div class="row">
           <div class="slider_main">
-            <div class="slider_part">
+            <div class="slider_part" data-aos="fade-right">
               <img class="w-100 img-fluid" src="assets/images/residence_img_1.jpg" alt="image">
               <h5><span>$</span> 47,456</h5>
               <h4>adiva priva, jardan</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam modi aliquam</p>
             </div>
-            <div class="slider_part">
+            <div class="slider_part" data-aos="zoom-in">
               <img class="w-100 img-fluid" src="assets/images/residence_img_2.jpg" alt="image">
               <h5><span>$</span> 65,333</h5>
               <h4>chischert, canada</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam modi aliquam</p>
             </div>
-            <div class="slider_part">
+            <div class="slider_part" data-aos="fade-left">
               <img class="w-100 img-fluid" src="assets/images/residence_img_3.jpg" alt="image">
               <h5><span>$</span> 55,656</h5>
               <h4>paris, france</h4>
@@ -165,7 +169,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-sm-12">
-            <div class="value_img">
+            <div class="value_img" data-aos="fade-right">
               <img class="w-100 img-fluid" src="assets/images/service_img.jpg" alt="image">
             </div>
           </div>
@@ -175,7 +179,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique saepe, vel cupiditate eligendi voluptates at. Sapiente corporis est cum. Maxime.</p>
             <!-- accordion -->
             <div class="accordion" id="accordionExample">
-              <div class="accordion-item">
+              <div class="accordion-item mb-2">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     <h4>basic services</h4>
@@ -187,7 +191,7 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div class="accordion-item mb-2">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <h4>medium services</h4>
@@ -199,7 +203,7 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion-item">
+              <div class="accordion-item mb-2">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     <h4>premium services</h4>
@@ -228,7 +232,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part">
+            <div class="product_part" data-aos="zoom-in-up">
               <h4>buy a house</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_house_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_house_img.jpg"></a>
@@ -239,7 +243,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part">
+            <div class="product_part" data-aos="zoom-in-up">
               <h4>rent a house</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_rent_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_rent_img.jpg"></a>
@@ -250,7 +254,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part">
+            <div class="product_part" data-aos="zoom-in-up">
               <h4>rent a hotel</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_hotel_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_hotel_img.jpg"></a>
@@ -270,7 +274,7 @@
       <div class="container">
         <div class="row about_main">
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part">
+            <div class="about_part" data-aos="fade-left">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/mamun_img.jpg" alt="image">
                 <div class="about_img_overly">
@@ -288,14 +292,14 @@
                   </a>
                 </div>
               </div>
-              <div class="about_txt">
+              <div class="about_txt mt-2">
                 <h5>CEO & Admin</h5>
                 <a href="https://web.facebook.com/Iqtidar.Mamun62">Mamun mia</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part">
+            <div class="about_part" data-aos="fade-left">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/mehedi_img.JPG" alt="image">
                 <div class="about_img_overly">
@@ -313,14 +317,14 @@
                   </a>
                 </div>
               </div>
-              <div class="about_txt">
+              <div class="about_txt mt-2">
                 <h5>Managing director</h5>
                 <a href="https://web.facebook.com/profile.php?id=100030139443699">Mehedi hasan</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part">
+            <div class="about_part" data-aos="fade-right">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/seba_img.jpg" alt="image">
                 <div class="about_img_overly">
@@ -338,14 +342,14 @@
                   </a>
                 </div>
               </div>
-              <div class="about_txt">
+              <div class="about_txt mt-2">
                 <h5>Facality chief</h5>
                 <a href="https://web.facebook.com/profile.php?id=100071040351893">seba sikdar</a>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part">
+            <div class="about_part" data-aos="fade-right">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/naim_img.JPG" alt="image">
                 <div class="about_img_overly">
@@ -363,7 +367,7 @@
                   </a>
                 </div>
               </div>
-              <div class="about_txt">
+              <div class="about_txt mt-2">
                 <h5>ambassidor</h5>
                 <a href="https://web.facebook.com/naimurrahman.durjoy.7503">Naimur Rahman</a>
               </div>
@@ -388,7 +392,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae alias reiciendis nobis neque impedit expedita repudiandae repellat voluptatibus aperiam laborum, magni corporis veniam eum quas vitae aliquam totam. Ex.</p>
             <div class="row contact_main">
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part">
+                <div class="contact_part" data-aos="zoom-out">
                   <i class="fa-solid fa-phone"></i>
                   <h4 style="display: inline; margin-left: 30% !important;">call</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
@@ -398,8 +402,8 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part">
-                  <i class="fa-solid fa-phone"></i>
+                <div class="contact_part" data-aos="zoom-out">
+                  <i class="fa-solid fa-comment-sms"></i>
                   <h4 style="display: inline; margin-left: 30% !important;">chat</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
                   <div class="button">
@@ -408,8 +412,8 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part">
-                  <i class="fa-solid fa-phone"></i>
+                <div class="contact_part" data-aos="zoom-out">
+                  <i class="fa-solid fa-video"></i>
                   <h4 style="display: inline; margin-left: 20% !important;">vedio call</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
                   <div class="button">
@@ -418,11 +422,11 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part">
-                  <i class="fa-solid fa-phone"></i>
+                <div class="contact_part" data-aos="zoom-out">
+                  <i class="fa-solid fa-message"></i>
                   <h4 style="display: inline; margin-left: 20% !important;">message</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
-                  <div class="button" style="width: 130px;">
+                  <div class="button s-btnn">
                     <a href="mailto: 01779045620">message now</a>
                   </div>
                 </div>
@@ -430,7 +434,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-12">
-            <div class="contact_img m-auto">
+            <div class="contact_img m-auto" data-aos="fade-down">
               <img class="w-100 img-fluid" src="assets/images/contact_img.jpg" alt="image">
             </div>
           </div>
@@ -476,9 +480,9 @@
           <div class="col-lg-4 col-sm-6 col-6">
             <div class="footer-part">
               <h4>get in touch</h4>
-              <a href="mailto: mm5172065@gmail.com"><i class="fa-solid fa-envelope"></i> mm5172065@gmail.com</a>
-              <a href="https://web.facebook.com/Iqtidar.Mamun62"><i class="fa-brands fa-facebook-f"></i>CEO - Mamun Mia</a>
-              <a href="telto: 01779045620"><i class="fa-solid fa-phone"></i>+88 01779045620</a>
+              <a href="mailto: mm5172065@gmail.com"><i class="fa-solid fa-envelope d-flex align-items-center justify-content-center"></i> mm5172065@gmail.com</a>
+              <a href="https://web.facebook.com/Iqtidar.Mamun62"><i class="fa-brands fa-facebook-f d-flex align-items-center justify-content-center"></i>CEO - Mamun Mia</a>
+              <a href="telto: 01779045620"><i class="fa-solid fa-phone d-flex align-items-center justify-content-center"></i>+88 01779045620</a>
             </div>
           </div>
         </div>
@@ -518,6 +522,8 @@
     <script src="assets/js/venobox.min.js"></script>
     <!-- slider js link -->
     <script src="assets/js/slick.min.js"></script>
+    <!-- aos js link -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js link -->
     <script src="assets/js/script.js"></script>
 </body>
