--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- -----------navber strat-------------- -->
     <nav class="navbar navbar-expand-lg main_menu">
         <div class="container">
-          <a class="navbar-brand menu_icon" href="#">
+          <a class="navbar-brand menu_icon" href="index.html">
             <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
