--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="assets/css/venobox.min.css">
       <!-- icon css link -->
     <link rel="stylesheet" href="assets/css/all.min.css">
-    <!-- aos animation css link -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
     <!-- main css link -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -56,6 +54,11 @@
               </li>
             </ul>
           </div>
+          <div class="user_nav">
+            <a href="login.html">
+              <i class="fa-solid fa-user"></i>
+            </a>
+          </div>
         </div>
       </nav>
     <!-- -----------navber end-------------- -->
@@ -68,7 +71,7 @@
             <div class="banner_txt">
               <h1 id="strings"></h1>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, ea incidunt. Excepturi adipisci voluptate distinctio quisquam quae, tenetur accusamus facere nostrum, fugiat mollitia et vero eos pariatur vitae? Itaque, maxime?</p>
-              <div class="search w-100" data-aos="fade-up">
+              <div class="search w-100">
                 <i class="fa-solid fa-location-dot"></i>
                 <input type="text" placeholder="Enter a Location">
                 <a href="#">search</a>
@@ -76,7 +79,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-6">
-            <div class="banner_img" data-aos="fade-down">
+            <div class="banner_img">
               <img class="w-100 img-fluid" src="assets/images/banner_main_img.jpg" alt="image">
             </div>
           </div>
@@ -133,19 +136,19 @@
         </div>
         <div class="row">
           <div class="slider_main">
-            <div class="slider_part" data-aos="fade-right">
+            <div class="slider_part">
               <img class="w-100 img-fluid" src="assets/images/residence_img_1.jpg" alt="image">
               <h5><span>$</span> 47,456</h5>
               <h4>adiva priva, jardan</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam modi aliquam</p>
             </div>
-            <div class="slider_part" data-aos="zoom-in">
+            <div class="slider_part">
               <img class="w-100 img-fluid" src="assets/images/residence_img_2.jpg" alt="image">
               <h5><span>$</span> 65,333</h5>
               <h4>chischert, canada</h4>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam modi aliquam</p>
             </div>
-            <div class="slider_part" data-aos="fade-left">
+            <div class="slider_part">
               <img class="w-100 img-fluid" src="assets/images/residence_img_3.jpg" alt="image">
               <h5><span>$</span> 55,656</h5>
               <h4>paris, france</h4>
@@ -169,7 +172,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-sm-12">
-            <div class="value_img" data-aos="fade-right">
+            <div class="value_img">
               <img class="w-100 img-fluid" src="assets/images/service_img.jpg" alt="image">
             </div>
           </div>
@@ -232,7 +235,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part" data-aos="zoom-in-up">
+            <div class="product_part">
               <h4>buy a house</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_house_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_house_img.jpg"></a>
@@ -243,7 +246,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part" data-aos="zoom-in-up">
+            <div class="product_part">
               <h4>rent a house</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_rent_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_rent_img.jpg"></a>
@@ -254,7 +257,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-sm-12">
-            <div class="product_part" data-aos="zoom-in-up">
+            <div class="product_part">
               <h4>rent a hotel</h4>
               <div class="product_img">
                 <a class="my-image-links" data-gall="gallery01" href="assets/images/product_hotel_img.jpg"><img class="w-100 img-fluid" src="assets/images/product_hotel_img.jpg"></a>
@@ -274,7 +277,7 @@
       <div class="container">
         <div class="row about_main">
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part" data-aos="fade-left">
+            <div class="about_part">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/mamun_img.jpg" alt="image">
                 <div class="about_img_overly">
@@ -299,7 +302,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part" data-aos="fade-left">
+            <div class="about_part">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/mehedi_img.JPG" alt="image">
                 <div class="about_img_overly">
@@ -324,7 +327,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part" data-aos="fade-right">
+            <div class="about_part">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/seba_img.jpg" alt="image">
                 <div class="about_img_overly">
@@ -349,7 +352,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-sm-6">
-            <div class="about_part" data-aos="fade-right">
+            <div class="about_part">
               <div class="about_img m-auto">
                 <img class="w-100 img-fluid" src="assets/images/naim_img.JPG" alt="image">
                 <div class="about_img_overly">
@@ -392,7 +395,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus beatae alias reiciendis nobis neque impedit expedita repudiandae repellat voluptatibus aperiam laborum, magni corporis veniam eum quas vitae aliquam totam. Ex.</p>
             <div class="row contact_main">
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part" data-aos="zoom-out">
+                <div class="contact_part">
                   <i class="fa-solid fa-phone"></i>
                   <h4 style="display: inline; margin-left: 30% !important;">call</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
@@ -402,7 +405,7 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part" data-aos="zoom-out">
+                <div class="contact_part">
                   <i class="fa-solid fa-comment-sms"></i>
                   <h4 style="display: inline; margin-left: 30% !important;">chat</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
@@ -412,7 +415,7 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part" data-aos="zoom-out">
+                <div class="contact_part">
                   <i class="fa-solid fa-video"></i>
                   <h4 style="display: inline; margin-left: 20% !important;">vedio call</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
@@ -422,7 +425,7 @@
                 </div>
               </div>
               <div class="col-lg-6 col-sm-6 col-6">
-                <div class="contact_part" data-aos="zoom-out">
+                <div class="contact_part">
                   <i class="fa-solid fa-message"></i>
                   <h4 style="display: inline; margin-left: 20% !important;">message</h4>
                   <p style="text-align: center;" >Lorem, ipsum dolor.</p>
@@ -434,7 +437,7 @@
             </div>
           </div>
           <div class="col-lg-6 col-sm-12">
-            <div class="contact_img m-auto" data-aos="fade-down">
+            <div class="contact_img m-auto">
               <img class="w-100 img-fluid" src="assets/images/contact_img.jpg" alt="image">
             </div>
           </div>
@@ -522,8 +525,6 @@
     <script src="assets/js/venobox.min.js"></script>
     <!-- slider js link -->
     <script src="assets/js/slick.min.js"></script>
-    <!-- aos js link -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js link -->
     <script src="assets/js/script.js"></script>
 </body>
