--- a/signup.html
+++ b/signup.html
@@ -11,14 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
      <!-- bootstrap css link -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-     <!-- slick slider css link -->
-     <link rel="stylesheet" href="assets/css/slick.css">
-     <!-- venubox css link -->
-     <link rel="stylesheet" href="assets/css/venobox.min.css">
        <!-- icon css link -->
      <link rel="stylesheet" href="assets/css/all.min.css">
-     <!-- aos animation css link -->
-     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
      <!-- main css link -->
      <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -128,14 +122,10 @@
     </div>
   </section>
   <!-- Section: Design Block -->
-
+    <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jQuery link - version 1.12.4 -->
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <!-- typed js link -->
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <!-- aos js link -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <!-- main js link -->
     <script src="assets/js/script.js"></script>
 </body>
