--- a/index.html
+++ b/index.html
@@ -28,15 +28,20 @@
     <!-- -----------navber strat-------------- -->
     <nav class="navbar navbar-expand-lg main_menu">
         <div class="container">
-          <a class="navbar-brand menu_icon" href="index.html">
-            <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- toglar (bar) -->
+          <button class="navbar-toggler bar" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <i class="fa-solid fa-bars"></i>
           </button>
+          <!-- toglar (bar) -->
+          <!-- navber image -->
+          <a class="navbar-brand menu_icon" href="index.html">
+            <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
+          </a>
+          <!-- navber image -->
+          <!-- navber item -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 menu_item">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-2 mt-lg-0 menu_item">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="#property">property</a>
               </li>
@@ -54,11 +59,14 @@
               </li>
             </ul>
           </div>
+          <!-- navber item -->
+          <!-- always user icon(nav) -->
           <div class="user_nav">
             <a href="login.html">
               <i class="fa-solid fa-user"></i>
             </a>
           </div>
+          <!-- always user icon(nav) -->
         </div>
       </nav>
     <!-- -----------navber end-------------- -->
