--- a/login.html
+++ b/login.html
@@ -24,13 +24,13 @@
    <!-- -----------navber strat-------------- -->
    <nav class="navbar navbar-expand-lg main_menu">
     <div class="container">
-      <a class="navbar-brand menu_icon" href="index.html">
-        <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
-      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <!-- <span class="navbar-toggler-icon"></span> -->
         <i class="fa-solid fa-bars"></i>
       </button>
+      <a class="navbar-brand menu_icon" href="index.html">
+        <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
+      </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 menu_item">
           <li class="nav-item">
@@ -104,7 +104,8 @@
         </div>
       </section>
       <footer>
-        <div
+        <div class="container">
+          <div
           class="d-flex flex-column align-items-center flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 login_footer">
           <div class="text-black mb-3 mb-md-0 login_footer_txt">
             Copyright © 2020. All rights reserved.
@@ -123,6 +124,7 @@
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
+        </div>
         </div>
       </footer>
 
