--- a/signup.html
+++ b/signup.html
@@ -24,13 +24,13 @@
      <!-- -----------navber strat-------------- -->
      <nav class="navbar navbar-expand-lg main_menu">
       <div class="container">
-        <a class="navbar-brand menu_icon" href="index.html">
-          <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
-        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <!-- <span class="navbar-toggler-icon"></span> -->
           <i class="fa-solid fa-bars"></i>
         </button>
+        <a class="navbar-brand menu_icon" href="index.html">
+          <img class="w-100 img-fluid" src="assets/images/logo.png" alt="logo">
+        </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 menu_item">
             <li class="nav-item">
@@ -67,25 +67,25 @@
               <div class="row">
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
-                    <input type="text" id="form3Example1" class="form-control inside-shadow" />
+                    <input type="text" id="form3Example1" class="form-control inside-shadow" placeholder="Type your first name !!" />
                     <label class="form-label" for="form3Example1">First name</label>
                   </div>
                 </div>
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
-                    <input type="text" id="form3Example2" class="form-control inside-shadow" />
-                    <label class="form-label" for="form3Example2">Last name</label>
+                    <input type="text" id="form3Example1" class="form-control inside-shadow" placeholder="Type your Surname !!" />
+                    <label class="form-label" for="form3Example2">sur-name</label>
                   </div>
                 </div>
               </div>
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <input type="email" id="form3Example3" class="form-control inside-shadow" />
+                    <input type="text" id="form3Example1" class="form-control inside-shadow" placeholder="Type your a valid email address !!" />
                 <label class="form-label" for="form3Example3">Email address</label>
               </div>
               <!-- Password input -->
               <div class="form-outline mb-4">
-                <input type="password" id="form3Example4" class="form-control inside-shadow" />
+                <input type="password" id="form3Example4" class="form-control inside-shadow" placeholder="Type your a unique password !!"/>
                 <label class="form-label" for="form3Example4">Password</label>
               </div>
               <!-- Checkbox -->
@@ -99,6 +99,13 @@
               <button type="submit" class="btn submit_button btn-block mb-4">
                 Sign up
               </button>
+              <!-- alrready have account -->
+              <div class="acc_hve mb-2">
+                <a href="login.html">
+                  Already have an account
+                </a>
+              </div>
+              <!-- alrready have account -->
               <!-- Register buttons -->
               <div class="text-center">
                 <p>or sign up with:</p>
