--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
     <!-- -----------start end---------------- -->
     <!-- ======================================================== -->
     <!-- -----------footer start------------- -->
-    <footer>
+    <footer style="background: transparent;">
       <div class="container">
         <div class="row footer_main">
           <div class="col-lg-4 col-sm-12">
