--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <h2>popular residences.</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row m-2">
           <div class="slider_main">
             <div class="slider_part">
               <img class="w-100 img-fluid" src="assets/images/residence_img_1.jpg" alt="image">
@@ -493,7 +493,7 @@
               <h4>get in touch</h4>
               <a href="mailto: mm5172065@gmail.com"><i class="fa-solid fa-envelope d-flex align-items-center justify-content-center"></i> mm5172065@gmail.com</a>
               <a href="https://web.facebook.com/Iqtidar.Mamun62"><i class="fa-brands fa-facebook-f d-flex align-items-center justify-content-center"></i>CEO - Mamun Mia</a>
-              <a href="telto: 01779045620"><i class="fa-solid fa-phone d-flex align-items-center justify-content-center"></i>+88 01779045620</a>
+              <a href="tel: 01779045620"><i class="fa-solid fa-phone d-flex align-items-center justify-content-center"></i>+88 01779045620</a>
             </div>
           </div>
         </div>
